demo-pv-main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-pv-front
  namespace: demo
  labels:
    app: demo-pv-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: demo-pv-front
